# realistic_voxel_scene_rendering_in_real_time

./: .gitignore  CMakeLists.txt  README.md  application.h  compile_shaders.sh  config.toml  main.cpp  meta.h  utils.h
args/: RegexCheckAction.cpp  RegexCheckAction.h  ValidPathCheckAction.cpp  ValidPathCheckAction.h  regex_check_action.cpp  regex_check_action.h  valid_path_check_action.cpp  valid_path_check_action.h
assets/vox/: !!!armchair_mats.pf_vox  !!monu9.pf_vox  !!monu9area.pf_vox  !#christmas_scene_w_mats.pf_vox  !#christmas_scene_w_mats2.pf_vox  #armchair.pf_vox  #bowl_bone.pf_vox  #brick_wall.pf_vox  #cart.pf_vox  #cart_full.pf_vox  #cart_full_4.pf_vox  #cartc.pf_vox  #carter.pf_vox  #cat_01.pf_vox  #cat_02.pf_vox  #cat_03.pf_vox  #chimney.pf_vox  #christmas_scene.pf_vox  #christmas_tree.pf_vox  #couch.pf_vox  #dog.pf_vox  #dog_house.pf_vox  #dog_scene.pf_vox  #door.pf_vox  #gifts.pf_vox  #horse.pf_vox  #lantern.pf_vox  #mailbox.pf_vox  #man.pf_vox  #odyssey_scene.pf_vox  #paperboy.pf_vox  #phantom_mansion.pf_vox  #red_booth_light_01.pf_vox  #red_booth_light_02.pf_vox  #red_booth_solid.pf_vox  #red_booth_transparency.pf_vox  #santa.pf_vox  #skyscraper_01_000.pf_vox  #skyscraper_02_000.pf_vox  #skyscraper_03_000.pf_vox  (+542 more)
concepts/: Incrementable.h  Iterable.h  OneOf.h  PtrConstructable.h  PtrConstructible.h  Renderer.h  StreamConcepts.h  Window.cpp  Window.h  incrementable.h  iterable.h  streams.h  window.cpp  window.h
coroutines/: Sequence.h  sequence.h
exceptions/: StackTraceException.cpp  StackTraceException.h  stacktrace_exception.cpp  stacktrace_exception.h
include/: ogt_vox.h
include/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
licenses/: ChaiScript.txt  NVIDIA_Efficient_Sparse_Voxel_Octrees.txt  SPIRV-Headers.txt  StaticTypeInfo.txt  glslang.txt
logging/: CallbackSink.cpp  FilteredSink.h  SomeLevelsSink.h  filtered_sink.h  global_logger.cpp  global_logger.h  loggers.cpp  loggers.h  some_levels_sink.h
models/: 1.vox  10x10x10.vox  2x2x2.vox  4x4x4.vox  69.vox  8x8x8.vox  8x8x8_small.vox  doom_115.vox  doom_15.vox  doom_15_2.vox  doom_29.vox  doom_58.vox
rendering/: TriangleRenderer.cpp  TriangleRenderer.h
shaders/: triangle.frag  triangle.vert
src/: Application.h  RunInfo.h  enums.h  main.cpp  main_svo.cpp
src/args/: RegexCheckAction.cpp  RegexCheckAction.h  ValidPathCheckAction.cpp  ValidPathCheckAction.h
src/concepts/: Incrementable.h  Iterable.h  OneOf.h  Renderer.h  StreamConcepts.h  Window.cpp  Window.h
src/coroutines/: Sequence.h
src/exceptions/: StackTraceException.cpp  StackTraceException.h
src/logging/: CallbackSink.cpp  CallbackSink.h  FilteredSink.h  SomeLevelsSink.h  loggers.cpp  loggers.h
src/rendering/: BakedProbesRenderer.cpp  BakedProbesRenderer.h  EditRenderer.cpp  EditRenderer.h  GBufferRenderer.cpp  GBufferRenderer.h  MainRenderer.cpp  MainRenderer.h  NaiveVoxelRenderer.cpp  NaiveVoxelRenderer.h  RTSimpleRenderer.cpp  RTSimpleRenderer.h  RTTriangleRenderer.cpp  RTTriangleRenderer.h  SVORenderer.cpp  SVORenderer.h  SimpleSVORenderer.cpp  SimpleSVORenderer.h  TriangleRenderer.cpp  TriangleRenderer.h  VulkanDebugCallbackImpl.cpp  VulkanDebugCallbackImpl.h
src/shaders/: debug_from_gbuffer_render.comp  gbuffer_render.comp  naive_vox.comp  probe_approx_grid.comp  probes_render.comp  probes_render_old.comp  probes_textures.comp  probes_textures_bake_bounces.comp  probes_textures_mat.comp  probes_textures_sample_small.comp  rt_triangle.comp  rt_triangle.comp.glsl  svo.comp  svo2.comp  svo_bvh.comp
src/threading/: ThreadPool.cpp  ThreadPool.h
src/ui/: EditorUI.cpp  EditorUI.h  GlfwWindow.cpp  GlfwWindow.h  ImGuiGlfwVulkan.cpp  ImGuiGlfwVulkan.h  MainUI.cpp  MainUI.h  SVOConvertDialog.h  SVOUI.cpp  SVOUI.h  SimpleSVORenderer_UI.cpp  SimpleSVORenderer_UI.h  UIData.h
src/utils/: Camera.cpp  Camera.h  FPSCounter.cpp  FPSCounter.h  FlameGraphSampler.cpp  FlameGraphSampler.h  GpuMemoryPool.h  StaticTree.h  Tree.h  Visitor.h  algorithms.h  bin.h  common_enums.h  config.h  files.cpp  files.h  tuple.h
src/voxel/: AABB_BVH.cpp  AABB_BVH.h  GPUModelInfo.cpp  GPUModelInfo.h  GPUModelManager.cpp  GPUModelManager.h  Materials.cpp  Materials.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ModelLoading.cpp  ModelLoading.h  RawVoxelModel.cpp  RawVoxelModel.h  RawVoxelScene.cpp  RawVoxelScene.h  SVO_utils.h  Scene.cpp  Scene.h  SceneFileManager.h  SparseVoxelOctree.cpp  SparseVoxelOctree.h  SparseVoxelOctreeCreation.cpp  SparseVoxelOctreeCreation.h  TeardownMaps.cpp  TeardownMaps.h
src/vulkan/: DefaultDeviceSuitabilityScorer.h  VulkanException.cpp  VulkanException.h
threading/: ThreadPool.cpp  ThreadPool.h
ui/: GlfwWindow.cpp  GlfwWindow.h  glfw_window.cpp  glfw_window.h
ui/events/: EventDispatchImpl.cpp  EventDispatchImpl.h  Subscription.cpp  Subscription.h  common.h  event_dispatch_impl.h  subscription.cpp  subscription.h
ui/imgui/: ImGuiBase.cpp  ImGuiBase.h  ImGuiGlfwVulkan.cpp  ImGuiGlfwVulkan.h  ImGuiInterface.cpp  ImGuiInterface.h  elements.h  serialization.h
utils/: RAII.h  common_enums.h
vulkan/: DefaultDeviceSuitabilityScorer.cpp  DefaultDeviceSuitabilityScorer.h  VulkanException.cpp  VulkanException.h  default_device_suitability_scorer.cpp  default_device_suitability_scorer.h  utils.cpp  utils.h  vulkan.h  vulkan_exception.cpp  vulkan_exception.h  vulkan_interface.h
vulkan/glsl/: Compiler.cpp  Compiler.h  GlslCompiler.cpp  GlslCompiler.h
vulkan/types/: Buffer.cpp  Buffer.h  BufferView.cpp  BufferView.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  Fence.cpp  Fence.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderPass.cpp  RenderPass.h  Semaphore.cpp  Semaphore.h  Shader.cpp  Shader.h  Surface.cpp  Surface.h  SwapChain.cpp  SwapChain.h  Texture.cpp  (+8 more)
(+165 files in other folders)
